# RT_Test_Week5

./: CMakeLists.txt  README.md  testWeek5.cpp
data/: InvalidNumericConversion.txt  MissingInfoPlane.txt  MissingInfoSphere.txt  OversizedTriple.txt  Scene.pbm  Scene.txt  SinglePlane.pbm  SinglePlane.txt  SinglePlaneDefaultMaterial.pbm  SinglePlaneNoMaterial.txt  SingleSphere.pbm  SingleSphere.txt  SingleSphereDefaultMaterial.pbm  SingleSphereNoMaterial.txt  UndersizedTriple.txt  UnknownObjectType.txt
